# SevDesk-Python-Client

./: .gitignore  README.md  create-api.sh  license  pyproject.toml
openAPI/: config-accounting.yaml  config-contact.yaml  config-invoice.yaml  openAPI-Accounting.json  openAPI-Contact.json  openAPI-Invoice.json
openAPI/configuration/: client.yaml
openAPI/specification/: openapi.json  parameters.json  readme.md  schemas.json
openAPI/templates/: client.py.jinja  readme.md  str_enum.py.jinja  types.py.jinja
sevdesk/: __init__.py
sevdesk/accounting/: __init__.py  category.py  creditnote.py  discount.py  invoice.py  lineitem.py  unity.py
sevdesk/accounting/client/: __init__.py
sevdesk/client/: __init__.py  client.py  types.py
sevdesk/client/models/: __init__.py  accounting_contact_model.py  accounting_contact_model_sev_client.py  book_invoice_json_body.py  book_invoice_json_body_check_account.py  book_invoice_json_body_check_account_transaction.py  book_invoice_json_body_type.py  book_invoice_response_200.py  book_invoice_response_200_objects_item.py  cancel_invoice_response_201.py  check_account_model.py  check_account_model_default_account.py  check_account_model_import_type.py  check_account_model_sev_client.py  (+197 more)
sevdesk/common/: __init__.py  apiobjectcache.py  pdf.py  sevdesk.py  types.py
sevdesk/contact/: __init__.py  address.py  communicationway.py  contact.py
sevdesk/invoice/: __init__.py  discount.py  invoice.py  lineitem.py  transaction.py  unity.py
tests/: test_accounting.py  test_common.py  test_contact.py  test_credit_note.py  test_invoice.py
(+282 files in other folders)
