[tool.poetry]
name = "sevdesk"
version = "0.1.0"
description = "A client to integrate the SevDesk API in Python Projects."
authors = ["Heinz-Peter Liechtenecker <heinz.liechtenecker@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "*"
openapi-python-client = "*"
attrs = "*"
cattrs = "*"
httpx = "*"
python-dateutil = "*"

[tool.poetry.dev-dependencies]
pytest = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
